tests/spectest/align.bin.wast
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
  "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
  "\01\00\00\0a\8e\80\80\80\00\01\88\80\80\80\00\00"
  "\41\00\2c\00\00\1a\0b"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
  "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
  "\01\00\00\0a\8e\80\80\80\00\01\88\80\80\80\00\00"
  "\41\00\2d\00\00\1a\0b"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
  "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
  "\01\00\00\0a\8e\80\80\80\00\01\88\80\80\80\00\00"
  "\41\00\2e\01\00\1a\0b"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
  "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
  "\01\00\00\0a\8e\80\80\80\00\01\88\80\80\80\00\00"
  "\41\00\2f\01\00\1a\0b"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
  "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
  "\01\00\00\0a\8e\80\80\80\00\01\88\80\80\80\00\00"
  "\41\00\28\02\00\1a\0b"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
  "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
  "\01\00\00\0a\8e\80\80\80\00\01\88\80\80\80\00\00"
  "\41\00\30\00\00\1a\0b"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
  "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
  "\01\00\00\0a\8e\80\80\80\00\01\88\80\80\80\00\00"
  "\41\00\31\00\00\1a\0b"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
  "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
  "\01\00\00\0a\8e\80\80\80\00\01\88\80\80\80\00\00"
  "\41\00\32\01\00\1a\0b"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
  "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
  "\01\00\00\0a\8e\80\80\80\00\01\88\80\80\80\00\00"
  "\41\00\33\01\00\1a\0b"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
  "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
  "\01\00\00\0a\8e\80\80\80\00\01\88\80\80\80\00\00"
  "\41\00\34\02\00\1a\0b"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
  "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
  "\01\00\00\0a\8e\80\80\80\00\01\88\80\80\80\00\00"
  "\41\00\35\02\00\1a\0b"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
  "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
  "\01\00\00\0a\8e\80\80\80\00\01\88\80\80\80\00\00"
  "\41\00\29\03\00\1a\0b"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
  "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
  "\01\00\00\0a\8e\80\80\80\00\01\88\80\80\80\00\00"
  "\41\00\2a\02\00\1a\0b"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
  "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
  "\01\00\00\0a\8e\80\80\80\00\01\88\80\80\80\00\00"
  "\41\00\2b\03\00\1a\0b"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
  "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
  "\01\00\00\0a\8f\80\80\80\00\01\89\80\80\80\00\00"
  "\41\00\41\01\3a\00\00\0b"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
  "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
  "\01\00\00\0a\8f\80\80\80\00\01\89\80\80\80\00\00"
  "\41\00\41\01\3b\01\00\0b"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
  "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
  "\01\00\00\0a\8f\80\80\80\00\01\89\80\80\80\00\00"
  "\41\00\41\01\36\02\00\0b"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
  "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
  "\01\00\00\0a\8f\80\80\80\00\01\89\80\80\80\00\00"
  "\41\00\42\01\3c\00\00\0b"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
  "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
  "\01\00\00\0a\8f\80\80\80\00\01\89\80\80\80\00\00"
  "\41\00\42\01\3d\01\00\0b"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
  "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
  "\01\00\00\0a\8f\80\80\80\00\01\89\80\80\80\00\00"
  "\41\00\42\01\3e\02\00\0b"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
  "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
  "\01\00\00\0a\8f\80\80\80\00\01\89\80\80\80\00\00"
  "\41\00\42\01\37\03\00\0b"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
  "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
  "\01\00\00\0a\92\80\80\80\00\01\8c\80\80\80\00\00"
  "\41\00\43\00\00\80\3f\38\02\00\0b"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
  "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
  "\01\00\00\0a\96\80\80\80\00\01\90\80\80\80\00\00"
  "\41\00\44\00\00\00\00\00\00\f0\3f\39\03\00\0b"
)
(module instance)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
    "\01\00\00\0a\8e\80\80\80\00\01\88\80\80\80\00\00"
    "\41\00\2c\01\00\1a\0b"
  )
  "alignment must not be larger than natural"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
    "\01\00\00\0a\8e\80\80\80\00\01\88\80\80\80\00\00"
    "\41\00\2d\01\00\1a\0b"
  )
  "alignment must not be larger than natural"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
    "\01\00\00\0a\8e\80\80\80\00\01\88\80\80\80\00\00"
    "\41\00\2e\02\00\1a\0b"
  )
  "alignment must not be larger than natural"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
    "\01\00\00\0a\8e\80\80\80\00\01\88\80\80\80\00\00"
    "\41\00\2f\02\00\1a\0b"
  )
  "alignment must not be larger than natural"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
    "\01\00\00\0a\8e\80\80\80\00\01\88\80\80\80\00\00"
    "\41\00\28\03\00\1a\0b"
  )
  "alignment must not be larger than natural"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
    "\01\00\00\0a\8e\80\80\80\00\01\88\80\80\80\00\00"
    "\41\00\30\01\00\1a\0b"
  )
  "alignment must not be larger than natural"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
    "\01\00\00\0a\8e\80\80\80\00\01\88\80\80\80\00\00"
    "\41\00\31\01\00\1a\0b"
  )
  "alignment must not be larger than natural"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
    "\01\00\00\0a\8e\80\80\80\00\01\88\80\80\80\00\00"
    "\41\00\32\02\00\1a\0b"
  )
  "alignment must not be larger than natural"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
    "\01\00\00\0a\8e\80\80\80\00\01\88\80\80\80\00\00"
    "\41\00\33\02\00\1a\0b"
  )
  "alignment must not be larger than natural"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
    "\01\00\00\0a\8e\80\80\80\00\01\88\80\80\80\00\00"
    "\41\00\34\03\00\1a\0b"
  )
  "alignment must not be larger than natural"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
    "\01\00\00\0a\8e\80\80\80\00\01\88\80\80\80\00\00"
    "\41\00\35\03\00\1a\0b"
  )
  "alignment must not be larger than natural"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
    "\01\00\00\0a\8e\80\80\80\00\01\88\80\80\80\00\00"
    "\41\00\29\04\00\1a\0b"
  )
  "alignment must not be larger than natural"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
    "\01\00\00\0a\8e\80\80\80\00\01\88\80\80\80\00\00"
    "\41\00\2a\03\00\1a\0b"
  )
  "alignment must not be larger than natural"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
    "\01\00\00\0a\8e\80\80\80\00\01\88\80\80\80\00\00"
    "\41\00\2b\04\00\1a\0b"
  )
  "alignment must not be larger than natural"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
    "\01\00\00\0a\8e\80\80\80\00\01\88\80\80\80\00\00"
    "\41\00\2c\01\00\1a\0b"
  )
  "alignment must not be larger than natural"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
    "\01\00\00\0a\8e\80\80\80\00\01\88\80\80\80\00\00"
    "\41\00\2d\01\00\1a\0b"
  )
  "alignment must not be larger than natural"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
    "\01\00\00\0a\8e\80\80\80\00\01\88\80\80\80\00\00"
    "\41\00\2e\02\00\1a\0b"
  )
  "alignment must not be larger than natural"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
    "\01\00\00\0a\8e\80\80\80\00\01\88\80\80\80\00\00"
    "\41\00\2f\02\00\1a\0b"
  )
  "alignment must not be larger than natural"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
    "\01\00\00\0a\8e\80\80\80\00\01\88\80\80\80\00\00"
    "\41\00\28\03\00\1a\0b"
  )
  "alignment must not be larger than natural"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
    "\01\00\00\0a\8e\80\80\80\00\01\88\80\80\80\00\00"
    "\41\00\30\01\00\1a\0b"
  )
  "alignment must not be larger than natural"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
    "\01\00\00\0a\8e\80\80\80\00\01\88\80\80\80\00\00"
    "\41\00\31\01\00\1a\0b"
  )
  "alignment must not be larger than natural"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
    "\01\00\00\0a\8e\80\80\80\00\01\88\80\80\80\00\00"
    "\41\00\32\02\00\1a\0b"
  )
  "alignment must not be larger than natural"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
    "\01\00\00\0a\8e\80\80\80\00\01\88\80\80\80\00\00"
    "\41\00\33\02\00\1a\0b"
  )
  "alignment must not be larger than natural"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
    "\01\00\00\0a\8e\80\80\80\00\01\88\80\80\80\00\00"
    "\41\00\34\03\00\1a\0b"
  )
  "alignment must not be larger than natural"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
    "\01\00\00\0a\8e\80\80\80\00\01\88\80\80\80\00\00"
    "\41\00\35\03\00\1a\0b"
  )
  "alignment must not be larger than natural"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
    "\01\00\00\0a\8e\80\80\80\00\01\88\80\80\80\00\00"
    "\41\00\29\04\00\1a\0b"
  )
  "alignment must not be larger than natural"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
    "\01\00\00\0a\8e\80\80\80\00\01\88\80\80\80\00\00"
    "\41\00\2a\03\00\1a\0b"
  )
  "alignment must not be larger than natural"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
    "\01\00\00\0a\8e\80\80\80\00\01\88\80\80\80\00\00"
    "\41\00\2b\04\00\1a\0b"
  )
  "alignment must not be larger than natural"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
    "\01\00\00\0a\8f\80\80\80\00\01\89\80\80\80\00\00"
    "\41\00\41\00\3a\01\00\0b"
  )
  "alignment must not be larger than natural"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
    "\01\00\00\0a\8f\80\80\80\00\01\89\80\80\80\00\00"
    "\41\00\41\00\3b\02\00\0b"
  )
  "alignment must not be larger than natural"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
    "\01\00\00\0a\8f\80\80\80\00\01\89\80\80\80\00\00"
    "\41\00\41\00\36\03\00\0b"
  )
  "alignment must not be larger than natural"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
    "\01\00\00\0a\8f\80\80\80\00\01\89\80\80\80\00\00"
    "\41\00\42\00\3c\01\00\0b"
  )
  "alignment must not be larger than natural"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
    "\01\00\00\0a\8f\80\80\80\00\01\89\80\80\80\00\00"
    "\41\00\42\00\3d\02\00\0b"
  )
  "alignment must not be larger than natural"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
    "\01\00\00\0a\8f\80\80\80\00\01\89\80\80\80\00\00"
    "\41\00\42\00\3e\03\00\0b"
  )
  "alignment must not be larger than natural"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
    "\01\00\00\0a\8f\80\80\80\00\01\89\80\80\80\00\00"
    "\41\00\42\00\37\04\00\0b"
  )
  "alignment must not be larger than natural"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
    "\01\00\00\0a\92\80\80\80\00\01\8c\80\80\80\00\00"
    "\41\00\43\00\00\00\00\38\03\00\0b"
  )
  "alignment must not be larger than natural"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
    "\01\00\00\0a\96\80\80\80\00\01\90\80\80\80\00\00"
    "\41\00\44\00\00\00\00\00\00\00\00\39\04\00\0b"
  )
  "alignment must not be larger than natural"
)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\97\80\80\80\00\04\60"
  "\01\7f\01\7d\60\01\7f\01\7c\60\02\7f\7f\01\7f\60"
  "\02\7f\7f\01\7e\03\85\80\80\80\00\04\00\01\02\03"
  "\05\83\80\80\80\00\01\00\01\07\cd\80\80\80\00\04"
  "\10\66\33\32\5f\61\6c\69\67\6e\5f\73\77\69\74\63"
  "\68\00\00\10\66\36\34\5f\61\6c\69\67\6e\5f\73\77"
  "\69\74\63\68\00\01\10\69\33\32\5f\61\6c\69\67\6e"
  "\5f\73\77\69\74\63\68\00\02\10\69\36\34\5f\61\6c"
  "\69\67\6e\5f\73\77\69\74\63\68\00\03\0a\89\89\80"
  "\80\00\04\e3\80\80\80\00\01\02\7d\43\00\00\20\41"
  "\21\01\02\40\02\40\02\40\02\40\02\40\20\00\0e\04"
  "\00\01\02\03\04\0b\41\00\20\01\38\02\00\41\00\2a"
  "\02\00\21\02\0c\03\0b\41\00\20\01\38\00\00\41\00"
  "\2a\00\00\21\02\0c\02\0b\41\00\20\01\38\01\00\41"
  "\00\2a\01\00\21\02\0c\01\0b\41\00\20\01\38\02\00"
  "\41\00\2a\02\00\21\02\0b\20\02\0b\fb\80\80\80\00"
  "\01\02\7c\44\00\00\00\00\00\00\24\40\21\01\02\40"
  "\02\40\02\40\02\40\02\40\02\40\20\00\0e\05\00\01"
  "\02\03\04\05\0b\41\00\20\01\39\03\00\41\00\2b\03"
  "\00\21\02\0c\04\0b\41\00\20\01\39\00\00\41\00\2b"
  "\00\00\21\02\0c\03\0b\41\00\20\01\39\01\00\41\00"
  "\2b\01\00\21\02\0c\02\0b\41\00\20\01\39\02\00\41"
  "\00\2b\02\00\21\02\0c\01\0b\41\00\20\01\39\03\00"
  "\41\00\2b\03\00\21\02\0b\20\02\0b\e2\82\80\80\00"
  "\01\02\7f\41\0a\21\02\02\40\02\40\02\40\02\40\02"
  "\40\02\40\20\00\0e\05\00\01\02\03\04\05\0b\20\01"
  "\41\00\46\04\40\41\00\20\02\3a\00\00\41\00\2c\00"
  "\00\21\03\0b\20\01\41\01\46\04\40\41\00\20\02\3a"
  "\00\00\41\00\2c\00\00\21\03\0b\0c\04\0b\20\01\41"
  "\00\46\04\40\41\00\20\02\3a\00\00\41\00\2d\00\00"
  "\21\03\0b\20\01\41\01\46\04\40\41\00\20\02\3a\00"
  "\00\41\00\2d\00\00\21\03\0b\0c\03\0b\20\01\41\00"
  "\46\04\40\41\00\20\02\3b\01\00\41\00\2e\01\00\21"
  "\03\0b\20\01\41\01\46\04\40\41\00\20\02\3b\00\00"
  "\41\00\2e\00\00\21\03\0b\20\01\41\02\46\04\40\41"
  "\00\20\02\3b\01\00\41\00\2e\01\00\21\03\0b\0c\02"
  "\0b\20\01\41\00\46\04\40\41\00\20\02\3b\01\00\41"
  "\00\2f\01\00\21\03\0b\20\01\41\01\46\04\40\41\00"
  "\20\02\3b\00\00\41\00\2f\00\00\21\03\0b\20\01\41"
  "\02\46\04\40\41\00\20\02\3b\01\00\41\00\2f\01\00"
  "\21\03\0b\0c\01\0b\20\01\41\00\46\04\40\41\00\20"
  "\02\36\02\00\41\00\28\02\00\21\03\0b\20\01\41\01"
  "\46\04\40\41\00\20\02\36\00\00\41\00\28\00\00\21"
  "\03\0b\20\01\41\02\46\04\40\41\00\20\02\36\01\00"
  "\41\00\28\01\00\21\03\0b\20\01\41\04\46\04\40\41"
  "\00\20\02\36\02\00\41\00\28\02\00\21\03\0b\0b\20"
  "\03\0b\b4\84\80\80\00\01\02\7e\42\0a\21\02\02\40"
  "\02\40\02\40\02\40\02\40\02\40\02\40\02\40\20\00"
  "\0e\07\00\01\02\03\04\05\06\07\0b\20\01\41\00\46"
  "\04\40\41\00\20\02\3c\00\00\41\00\30\00\00\21\03"
  "\0b\20\01\41\01\46\04\40\41\00\20\02\3c\00\00\41"
  "\00\30\00\00\21\03\0b\0c\06\0b\20\01\41\00\46\04"
  "\40\41\00\20\02\3c\00\00\41\00\31\00\00\21\03\0b"
  "\20\01\41\01\46\04\40\41\00\20\02\3c\00\00\41\00"
  "\31\00\00\21\03\0b\0c\05\0b\20\01\41\00\46\04\40"
  "\41\00\20\02\3d\01\00\41\00\32\01\00\21\03\0b\20"
  "\01\41\01\46\04\40\41\00\20\02\3d\00\00\41\00\32"
  "\00\00\21\03\0b\20\01\41\02\46\04\40\41\00\20\02"
  "\3d\01\00\41\00\32\01\00\21\03\0b\0c\04\0b\20\01"
  "\41\00\46\04\40\41\00\20\02\3d\01\00\41\00\33\01"
  "\00\21\03\0b\20\01\41\01\46\04\40\41\00\20\02\3d"
  "\00\00\41\00\33\00\00\21\03\0b\20\01\41\02\46\04"
  "\40\41\00\20\02\3d\01\00\41\00\33\01\00\21\03\0b"
  "\0c\03\0b\20\01\41\00\46\04\40\41\00\20\02\3e\02"
  "\00\41\00\34\02\00\21\03\0b\20\01\41\01\46\04\40"
  "\41\00\20\02\3e\00\00\41\00\34\00\00\21\03\0b\20"
  "\01\41\02\46\04\40\41\00\20\02\3e\01\00\41\00\34"
  "\01\00\21\03\0b\20\01\41\04\46\04\40\41\00\20\02"
  "\3e\02\00\41\00\34\02\00\21\03\0b\0c\02\0b\20\01"
  "\41\00\46\04\40\41\00\20\02\3e\02\00\41\00\35\02"
  "\00\21\03\0b\20\01\41\01\46\04\40\41\00\20\02\3e"
  "\00\00\41\00\35\00\00\21\03\0b\20\01\41\02\46\04"
  "\40\41\00\20\02\3e\01\00\41\00\35\01\00\21\03\0b"
  "\20\01\41\04\46\04\40\41\00\20\02\3e\02\00\41\00"
  "\35\02\00\21\03\0b\0c\01\0b\20\01\41\00\46\04\40"
  "\41\00\20\02\37\03\00\41\00\29\03\00\21\03\0b\20"
  "\01\41\01\46\04\40\41\00\20\02\37\00\00\41\00\29"
  "\00\00\21\03\0b\20\01\41\02\46\04\40\41\00\20\02"
  "\37\01\00\41\00\29\01\00\21\03\0b\20\01\41\04\46"
  "\04\40\41\00\20\02\37\02\00\41\00\29\02\00\21\03"
  "\0b\20\01\41\08\46\04\40\41\00\20\02\37\03\00\41"
  "\00\29\03\00\21\03\0b\0b\20\03\0b"
)
(module instance)
(assert_return (invoke "f32_align_switch" (i32.const 0x0)) (f32.const 0x1.4p+3))
(assert_return (invoke "f32_align_switch" (i32.const 0x1)) (f32.const 0x1.4p+3))
(assert_return (invoke "f32_align_switch" (i32.const 0x2)) (f32.const 0x1.4p+3))
(assert_return (invoke "f32_align_switch" (i32.const 0x3)) (f32.const 0x1.4p+3))
(assert_return (invoke "f64_align_switch" (i32.const 0x0)) (f64.const 0x1.4p+3))
(assert_return (invoke "f64_align_switch" (i32.const 0x1)) (f64.const 0x1.4p+3))
(assert_return (invoke "f64_align_switch" (i32.const 0x2)) (f64.const 0x1.4p+3))
(assert_return (invoke "f64_align_switch" (i32.const 0x3)) (f64.const 0x1.4p+3))
(assert_return (invoke "f64_align_switch" (i32.const 0x4)) (f64.const 0x1.4p+3))
(assert_return
  (invoke "i32_align_switch" (i32.const 0x0) (i32.const 0x0))
  (i32.const 0xa)
)
(assert_return
  (invoke "i32_align_switch" (i32.const 0x0) (i32.const 0x1))
  (i32.const 0xa)
)
(assert_return
  (invoke "i32_align_switch" (i32.const 0x1) (i32.const 0x0))
  (i32.const 0xa)
)
(assert_return
  (invoke "i32_align_switch" (i32.const 0x1) (i32.const 0x1))
  (i32.const 0xa)
)
(assert_return
  (invoke "i32_align_switch" (i32.const 0x2) (i32.const 0x0))
  (i32.const 0xa)
)
(assert_return
  (invoke "i32_align_switch" (i32.const 0x2) (i32.const 0x1))
  (i32.const 0xa)
)
(assert_return
  (invoke "i32_align_switch" (i32.const 0x2) (i32.const 0x2))
  (i32.const 0xa)
)
(assert_return
  (invoke "i32_align_switch" (i32.const 0x3) (i32.const 0x0))
  (i32.const 0xa)
)
(assert_return
  (invoke "i32_align_switch" (i32.const 0x3) (i32.const 0x1))
  (i32.const 0xa)
)
(assert_return
  (invoke "i32_align_switch" (i32.const 0x3) (i32.const 0x2))
  (i32.const 0xa)
)
(assert_return
  (invoke "i32_align_switch" (i32.const 0x4) (i32.const 0x0))
  (i32.const 0xa)
)
(assert_return
  (invoke "i32_align_switch" (i32.const 0x4) (i32.const 0x1))
  (i32.const 0xa)
)
(assert_return
  (invoke "i32_align_switch" (i32.const 0x4) (i32.const 0x2))
  (i32.const 0xa)
)
(assert_return
  (invoke "i32_align_switch" (i32.const 0x4) (i32.const 0x4))
  (i32.const 0xa)
)
(assert_return
  (invoke "i64_align_switch" (i32.const 0x0) (i32.const 0x0))
  (i64.const 0xa)
)
(assert_return
  (invoke "i64_align_switch" (i32.const 0x0) (i32.const 0x1))
  (i64.const 0xa)
)
(assert_return
  (invoke "i64_align_switch" (i32.const 0x1) (i32.const 0x0))
  (i64.const 0xa)
)
(assert_return
  (invoke "i64_align_switch" (i32.const 0x1) (i32.const 0x1))
  (i64.const 0xa)
)
(assert_return
  (invoke "i64_align_switch" (i32.const 0x2) (i32.const 0x0))
  (i64.const 0xa)
)
(assert_return
  (invoke "i64_align_switch" (i32.const 0x2) (i32.const 0x1))
  (i64.const 0xa)
)
(assert_return
  (invoke "i64_align_switch" (i32.const 0x2) (i32.const 0x2))
  (i64.const 0xa)
)
(assert_return
  (invoke "i64_align_switch" (i32.const 0x3) (i32.const 0x0))
  (i64.const 0xa)
)
(assert_return
  (invoke "i64_align_switch" (i32.const 0x3) (i32.const 0x1))
  (i64.const 0xa)
)
(assert_return
  (invoke "i64_align_switch" (i32.const 0x3) (i32.const 0x2))
  (i64.const 0xa)
)
(assert_return
  (invoke "i64_align_switch" (i32.const 0x4) (i32.const 0x0))
  (i64.const 0xa)
)
(assert_return
  (invoke "i64_align_switch" (i32.const 0x4) (i32.const 0x1))
  (i64.const 0xa)
)
(assert_return
  (invoke "i64_align_switch" (i32.const 0x4) (i32.const 0x2))
  (i64.const 0xa)
)
(assert_return
  (invoke "i64_align_switch" (i32.const 0x4) (i32.const 0x4))
  (i64.const 0xa)
)
(assert_return
  (invoke "i64_align_switch" (i32.const 0x5) (i32.const 0x0))
  (i64.const 0xa)
)
(assert_return
  (invoke "i64_align_switch" (i32.const 0x5) (i32.const 0x1))
  (i64.const 0xa)
)
(assert_return
  (invoke "i64_align_switch" (i32.const 0x5) (i32.const 0x2))
  (i64.const 0xa)
)
(assert_return
  (invoke "i64_align_switch" (i32.const 0x5) (i32.const 0x4))
  (i64.const 0xa)
)
(assert_return
  (invoke "i64_align_switch" (i32.const 0x6) (i32.const 0x0))
  (i64.const 0xa)
)
(assert_return
  (invoke "i64_align_switch" (i32.const 0x6) (i32.const 0x1))
  (i64.const 0xa)
)
(assert_return
  (invoke "i64_align_switch" (i32.const 0x6) (i32.const 0x2))
  (i64.const 0xa)
)
(assert_return
  (invoke "i64_align_switch" (i32.const 0x6) (i32.const 0x4))
  (i64.const 0xa)
)
(assert_return
  (invoke "i64_align_switch" (i32.const 0x6) (i32.const 0x8))
  (i64.const 0xa)
)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\8b\80\80\80\00\02\60"
  "\02\7f\7e\00\60\01\7f\01\7f\03\83\80\80\80\00\02"
  "\00\01\05\83\80\80\80\00\01\00\01\07\90\80\80\80"
  "\00\02\05\73\74\6f\72\65\00\00\04\6c\6f\61\64\00"
  "\01\0a\9b\80\80\80\00\02\89\80\80\80\00\00\20\00"
  "\20\01\37\02\00\0b\87\80\80\80\00\00\20\00\28\02"
  "\00\0b"
)
(module instance)
(assert_trap
  (invoke "store" (i32.const 0xfffc) (i64.const 0xffff_ffff_ffff_ffff))
  "out of bounds memory access"
)
(assert_return (invoke "load" (i32.const 0xfffc)) (i32.const 0x0))
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
    "\01\00\01\0a\8e\80\80\80\00\01\88\80\80\80\00\00"
    "\41\00\28\1f\00\1a\0b"
  )
  "alignment must not be larger than natural"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
    "\01\00\01\0a\8e\80\80\80\00\01\88\80\80\80\00\00"
    "\41\00\28\20\00\1a\0b"
  )
  "alignment must not be larger than natural"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
    "\01\00\01\0a\8e\80\80\80\00\01\88\80\80\80\00\00"
    "\41\00\28\21\00\1a\0b"
  )
  "alignment must not be larger than natural"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
    "\01\00\01\0a\8e\80\80\80\00\01\88\80\80\80\00\00"
    "\41\00\28\3f\00\1a\0b"
  )
  "alignment must not be larger than natural"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
    "\01\00\01\0a\8d\80\80\80\00\01\87\80\80\80\00\00"
    "\41\00\28\01\1a\0b"
  )
  "type mismatch"
)
(assert_malformed
  (module binary
    "\00\61\73\6d\01\00\00\00\01\04\01\60\00\00\03\02"
    "\01\00\05\03\01\00\01\0a\0b\01\09\00\41\00\28\80"
    "\01\00\1a\0b"
  )
  "malformed memop flags"
)
(assert_malformed
  (module binary
    "\00\61\73\6d\01\00\00\00\01\04\01\60\00\00\03\02"
    "\01\00\05\03\01\00\01\0a\0b\01\09\00\41\00\28\80"
    "\02\00\1a\0b"
  )
  "malformed memop flags"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
    "\01\00\01\0a\97\80\80\80\00\01\91\80\80\80\00\00"
    "\41\00\28\02\ff\ff\ff\ff\ff\ff\ff\ff\ff\01\1a\0b"
  )
  "offset out of range"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
    "\01\00\01\0a\97\80\80\80\00\01\91\80\80\80\00\00"
    "\41\00\28\3f\ff\ff\ff\ff\ff\ff\ff\ff\ff\01\1a\0b"
  )
  "alignment must not be larger than natural"
)
